# plonk

./: .gitignore  Cargo.toml  build.rs
benches/: plonk.rs
src/: circuit.rs  lib.rs  multicore.rs  permutation.rs  test_utils.rs  util.rs
src/commitment_scheme/kzg10/: key.rs
src/constraint_system/: composer.rs  helper.rs  logic.rs
src/fft/: domain.rs  polynomial.rs
src/gpu/: error.rs  fft.rs  locks.rs  mod.rs  program.rs  sources.rs
src/gpu/cl/: fft.cl
src/plonkup/: multiset.rs
src/plonkup/table/: preprocess.rs
src/proof_system/: preprocess.rs  prover.rs  quotient_poly.rs  verifier.rs
