[package]
name = "dusk-plonk"
version = "0.10.0"
categories = ["algorithms", "cryptography", "science", "mathematics"]
edition = "2021"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/plonk"
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]

[dependencies]
thiserror = "1.0"
log = "0.4"
lazy_static = "1.4.0"
merlin = { version = "3.0", default-features = false }
rand_core = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
dusk-jubjub = { git = "https://github.com/zeeka-network/jubjub.git", rev = "7291f63", default-features = false }
itertools = { version = "0.9", default-features = false }
hashbrown = { version = "0.9", default-features = false, features = ["ahash"] }
rayon = { version = "1.5", optional = true }
num_cpus = { version = "1", optional = true }
futures = { version = "0.3", default_features = false, features = ["executor"] }
crossbeam = { version = "0.7", optional = true }
cfg-if = "1.0"
# Dusk related deps for WASMI serde
canonical = { version = "0.7", optional = true }
canonical_derive = { version = "0.7", optional = true }

rust-gpu-tools = { git = "https://github.com/zeeka-network/rust-gpu-tools.git", rev = "6f74077", optional = true }
dusk-bls12_381 = { git = "https://github.com/zeeka-network/bls12_381.git", rev = "e2e0f8d", default-features = false, features = ["groups", "pairings", "endo"] }
ec-gpu-gen = { git = "https://github.com/zeeka-network/ec-gpu.git", rev = "a598adf", optional = true }
fs2 = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"
rand = "0.8"
rand_core = "0.6.3"

[build-dependencies]
dusk-bls12_381 = { git = "https://github.com/zeeka-network/bls12_381.git", rev = "e2e0f8d", default-features = false, features = ["groups", "pairings", "endo"] }
execute = "0.2.9"
ec-gpu = { git = "https://github.com/zeeka-network/ec-gpu.git", rev = "a598adf", optional = true }
ec-gpu-gen = { git = "https://github.com/zeeka-network/ec-gpu.git", rev = "a598adf", optional = true }
hex = "0.4"
sha2 = "0.9"

[[bench]]
name = "plonk"
harness = false

[features]
default = ["std", "multi-core", "gpu"]
std = [
    "rand_core/std",
    "dusk-bls12_381/default", # Includes `parallel`
    "dusk-jubjub/default",
    "itertools/default",
    "hashbrown/default",
    "alloc",
    "rayon"
]
alloc = ["dusk-bls12_381/alloc"]
trace = []
trace-print = ["trace"]
canon = ["dusk-bls12_381/canon", "dusk-jubjub/canon", "canonical", "canonical_derive"]
multi-core = ["rayon", "num_cpus", "futures/thread-pool", "crossbeam", "dusk-bls12_381/parallel"]
gpu = ["cuda", "fs2", "dusk-bls12_381/gpu"]
cuda = ["rust-gpu-tools/cuda", "ec-gpu-gen/cuda"]
opencl = ["rust-gpu-tools/opencl", "ec-gpu-gen/opencl"]
benchmark-on-paper = []

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
